  * Change ~ruff-lsp~ to ~ruff~ for python lsp client. All ~ruff-lsp~ customizable variable change to ~ruff~. Lsp server command now is ~["ruff" "server"]~ instead of ~["ruff-lsp"]~.
  * Add futhark support
  * Optimize overlay creation by checking window visibility first
  * Replace the per-interface ~(INTERFACE ...)~ pcase forms with a single,
    unified ~(lsp-interface INTERFACE ...)~ form. The per-interface forms are no
    longer generated. *This is a breaking change.* (See #4430.)
  * If asm-lsp is installed, lsp-asm won't try to download it to cache store
  * Fix lsp-unzip on windows when unzip was found on the PATH
  * Fix zls wrong bin path
  * Add support for buf CLI ([[https://github.com/bufbuild/buf/releases/tag/v1.43.0][beta]])
  * Add fennel support
  * Add support for [[https://github.com/nextflow-io/language-server][Nextflow]]
  * Add TypeSpec support
  * Add Tree-sitter query support
  * Add [[https://github.com/mrjosh/helm-ls][helm-ls]] (YAML Kubernetes Helm) support.
  * Add ~lsp-bash-allowed-shells~ to configure supported ~sh-shell~ values.
  * Add hint about ~activation-fn~ for unsupported buffers.
  * Add Roc support
  * Add support for environment variables in rust analyzer runnables. Allowing the new ~Update Tests (Expect)~ code lens to work as expected.
  * Add support for [[https://github.com/mathworks/MATLAB-language-server][MATLAB language server]] (requires [[https://github.com/MathWorks/Emacs-MATLAB-Mode][matlab-mode]]).
  * Add support for [[https://github.com/c3lang/c3c][c3 language]] (requires [[https://github.com/c3lang/c3-ts-mode][c3-ts-mode]] and [[https://github.com/pherrymason/c3-lsp][c3lsp]]).
  * Drop support for emacs 27.1 and 27.2
  * Add ~lsp-nix-nixd-server-arguments~ to allow passing arguments to the ~nixd~ LSP.